[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite_database"
description = "A weird wrapper for SQLite Connection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["sqlite_database"]
