[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite_database"
description = "A weird wrapper for SQLite Connection"
authors = [
    {name = "Rimu Eirnarn", email = "rimuru720@proton.me"}
]
keywords = ["sqlite", "sqlite3"]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/RimuEirnarn/sqlite_database"
documentation = "https://sqlite-database.rtfd.io"
repository = "https://github.com/RimuEirnarn/sqlite_database.git"

[tool.setuptools]
zip-safe = true
packages = ["sqlite_database"]

[project.optional-dependencies]
dev = ["pytest"]
docs = ['sphinx', 'myst_parser']
mysql = ['mysql-connector-python']
