[metadata]
name = sqlite_database
version = attr: sqlite_database.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/sqlite_wrapper
author = RimuEirnarn
author_email = rimuru720@proton.me
description = A weird wrapper for SQLite Connection
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/sqlite_database

[options]
packages = sqlite_database
python_require = >= 3.11
